--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@tanstack/react-query": "^5.82.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookie": "^1.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.516.0",
     "next": "15.3.3",
     "react": "^19.0.0",
@@ -25,6 +33,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.1",
+    "tanstack-query": "^1.0.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
